# cylonix

./: .clang-format  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  INSTALL.md  Makefile  README.md  SYSTEM.md  pubspec.yaml
android/: build.gradle  gradle.properties  settings.gradle
docker/: Dockerfile
docs/: peer_messaging_websocket_api.md  reauth-stale-keyexpiry.md
ios/: Podfile
lib/: about_view.dart  app.dart  custom_login_view.dart  dns_settings_view.dart  exit_node_picker.dart  files_waiting_view.dart  health_view.dart  home_page.dart  intro_page.dart  l2_relay_settings_view.dart  main.dart  main_view.dart  peer_details_view.dart  peer_messaging_inbox_view.dart  peer_messaging_thread_view.dart  permissions_view.dart  ping_view.dart  run_exit_node_view.dart  settings_view.dart  share_view.dart  split_tunnel_view.dart  subnet_routing_view.dart  theme.dart  user_switcher_view.dart
linux/: CMakeLists.txt  my_application.cc
macos/: ExportOption.plist
macos-direct/: ExportOption.plist  Podfile  README.md
scripts/: build-deb.sh  build_linux_post.sh  build_linux_pre.sh  config.defaults.sh  generate_local_config.sh
test/: peer_messaging_message_test.dart  widget_test.dart
web/: index.html  manifest.json
windows/share_extension/: CMakeLists.txt
windows/share_extension/manifest/: Package.appmanifest
windows/share_extension/resources/: app.manifest  resource.h  resources.rc
windows/share_extension/src/: main.cpp  share_handler.cpp  share_handler.h  share_window.cpp  share_window.h
windows/share_extension/test/: test.bat
(+189 files in other folders)
